# tree-sitter-sqf

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sqf.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sqf/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSqfTests/: TreeSitterSqfTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: array.txt  code.txt  comment.txt  macro.txt  macro_call.txt  number.txt  parentheses.txt  statement.txt  string.txt  whitespace.txt
